Fri Dec 24 12:56:46 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* custom.h: Remove defs for RIPS MiscOS.
	* configure.ac, aclocal.m4: Updated to Autoconf 2.68.

Wed Dec 22 21:21:28 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* gettext.h: Synchronized with gettext 0.18.1.

2010-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.18.1.
	* ABOUT-NLS, config.rpath: Updated from gettext 0.18.1.

Sun Dec 19 16:43:14 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h (update_PROCINFO_str, update_PROCINFO_num, make_str_node):
	Change `char *' parameters to `const char *' to avoid some
	compiler warnings.
	* ext.c (do_ext): Remove cast in call to make_string.
	* field.c (update_PROCINFO_str, update_PROCINFO_num): Adjust. 
	* main.c (init_args): Remove casts in calls to make_string.
	* node.c (r_make_str_node): Add cast in assignment if ALREADY_MALLOCED.

Sat Dec 18 20:12:59 2010  Eli Zaretskii  <eliz@gnu.org>

	* array.c, gawkmisc.c, io.c, main.c, regex_internal.h,
	awkgram.y, awk.h, array.c: Remove OS2 and _MSC_VER defines.

Sat Dec 18 19:56:17 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c, eval.c, floatcomp.c, io.c: Remove all the crufty
	old code for #ifdef CRAY.

Thu Dec 16 11:06:50 2010  Arnold D. Robbins  <arnold@skeeve.com>

	Put strftime() default format into PROCINFO["strftime"].

	* awk.h (def_strftime_format): Declare const char[] array.
	* main.c (def_strftime_format): Define it.
	(load_procinfo): Load it into PROCINFO.
	* builtin.c (do_strftime): Use value in PROCINFO for format
	string if it's there. Remove old def_format static array.

Mon Dec 13 17:12:44 2010  Arnold D. Robbins  <arnold@skeeve.com>

	If not POSIX, turn [d-h] into [defgh].

	* re.c (check_bracket_exp): Make warning about ranges under
	lint control.
	(expand_range): New routine to expand ranges.
	(make_regexp): Check if might have range and call expand_range.
	(add_char): New helper function for expand_range.
