@@ -1,3 +1,3 @@
 #include "config.h"
 
-const char *version_string = "@(#)GNU Awk 3.1.76";
+const char *version_string = "@(#)GNU Awk 3.1.77";
