@@ -1,6 +1,6 @@
 2010-12-18  Eli Zaretskii  <eliz@gnu.org>
 
-	* README_d/README.pc: Update and simplify.  Remove lots of
+	* README.pc: Update and simplify.  Remove lots of
 	outdated stuff for systems and configurations no longer supported.
 
 2010-12-18  Arnold Robbins  <arnold@skeeve.com>
