@@ -1,3 +1,7 @@
+Sat Dec 25 21:40:25 2010  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* readline.m4: Fixed to work correctly with Autoconf 2.68.
+
 Fri Dec 24 13:00:26 2010  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* readline.m4: Updated to work with Autoconf 2.68.
